@@ -17,15 +17,43 @@
 using namespace std;
  
 count_array_t::count_array_t()
+	: size(0)
 {
-	fill_n(value, OP_MAX_COUNTERS, 0);
+}
+
+
+void count_array_t::resize(size_type newsize)
+{
+	container.resize(newsize);
+	for (size_type i = size; i < newsize; ++i)
+		container[i] = 0;
+	size = newsize;
+}
+
+
+u32 count_array_t::operator[](size_type index) const
+{
+	if (index >= size)
+		return 0;
+	return container[index];
+}
+
+
+u32 & count_array_t::operator[](size_type index)
+{
+	if (index >= size)
+		resize(index + 1);
+	return container[index];
 }
 
 
 count_array_t & count_array_t::operator+=(count_array_t const & rhs)
 {
-	for (size_t i = 0 ; i < OP_MAX_COUNTERS ; ++i)
-		value[i] += rhs.value[i];
+	if (rhs.size > size)
+		resize(rhs.size);
+
+	for (size_type i = 0 ; i < size ; ++i)
+		container[i] += rhs.container[i];
 
 	return *this;
 }
@@ -33,17 +61,18 @@ count_array_t & count_array_t::operator+=(count_array_t const & rhs)
 
 count_array_t & count_array_t::operator-=(count_array_t const & rhs)
 {
-	for (size_t i = 0 ; i < OP_MAX_COUNTERS ; ++i)
-		value[i] -= rhs.value[i];
+	if (rhs.size > size)
+		resize(rhs.size);
+
+	for (size_type i = 0 ; i < size ; ++i)
+		container[i] -= rhs.container[i];
 
 	return *this;
 }
 
 
-bool count_array_t::empty() const
+bool count_array_t::zero() const
 {
-	u32 const * first = value;
-	u32 const * last  = value + OP_MAX_COUNTERS;
-
-	return find_if(first, last, bind2nd(not_equal_to<int>(), 0)) == last;
+	return find_if(container.begin(), container.end(),
+	               bind2nd(not_equal_to<int>(), 0)) == container.end();
 }
